<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feedback</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_welcome">Welcome to SBI Life Insurance Customer Feedback Form.</string>
    <string name="share_exp">Please share your experience with us.</string>
    <string name="home_click_next">NEXT</string>
    <string name="home_click_cont">Write Review</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="mobile_number">Enter your Registered Phone/ Mobile No.</string>
    <string name="mobile_num_not_registered">Enter your Phone/ Mobile No.*</string>
    <string name="register_user_enter_policy_number">Please Register to get your Policy Number:</string>
    <string name="name">Enter your Full Name:*</string>
    <string name="str_10_digits">(10 digits only)</string>
    <string name="str_11_digits">(11 digits only)</string>
    <string name="policy_number">Enter your Policy Number:</string>
    <string name="submit">Submit</string>
    <string name="mob">Mobile Number</string>
    <string name="pol">Policy Number</string>
    <string name="sbil_fb">SBIL Customer Feedback</string>
    <string name="nm">Name</string>
    <string name="viewstats">View Overall Ratings</string>
    <string name="go">GO</string>
    <string name="mail">Email ID</string>
    <string name="syncall">SYNC ALL DATA</string>
    <string name="search">Search</string>
    <string name="sync_status">Sync Status</string>
    <string name="sync">Sync</string>
    <string name="cust_id">Customer ID</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="cust_fb">CUSTOMER FEEDBACK</string>
    <string name="choose_option">Please Select an option to continue</string>
    <string name="purpose"><b>Purpose of Visit</b></string>
    <string name="prospect_user"><b>Prospect User</b></string>
    <string name="reg_mob_email"><b>Register Mobile Number/ Email ID</b></string>
    <string name="sbil_emp_login"><b>SBIL Employee Login</b></string>
    <string name="pol_holder"><b>Policy Holder</b></string>
    <string name="select_dob">Select DOB</string>
    <string name="ok">OK</string>
    <string name="review_all"><b>Review All.</b></string>
    <string name="rate_us"><b>Please rate your experience with us.</b></string>
    <string name="review_highlights">Overall Review Highlights</string>
    <string name="purpose_of_visit"><b>Please let us know the purpose of your visit:</b></string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="mob_reg"><c>Your Mobile Number is not registered with us. Please enter your Policy number and Date of Birth/ PAN for registering your Mobile Number.</c></string>
    <string name="insurance_plan">Wish to know about Insurance plan</string>
    <string name="insurance_agent">Wish to become an Insurance Agent</string>
    <string name="career">Wish to make a career in SBI Life</string>
    <string name="renew_premium">Renewal Premium Payment</string>
    <string name="policy_chg">Policy Alterations / Corrections / Change</string>
    <string name="payout">Payout</string>
    <string name="claims">Claims</string>
    <string name="others">Others</string>
    <string name="comments">Comments</string>
    <string name="mobile_to_be_reg">Mobile Number to be Registered:</string>
    <string name="email">Email ID to be Registered:</string>
    <string name="pan">Enter your PAN Number:</string>
    <string name="dob">Select your Date of Birth:</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="title_activity_feedback_type">FeedbackType</string>
    <string name="cust_feedbk"><u>CUSTOMER FEEDBACK</u></string>
    <string name="greetings_sbi"><b>Greetings from SBI Life!</b></string>
    <string name="title_activity_ratings">Ratings</string>
    <string name="title_activity_ratings_stats">RatingsStats</string>
    <string name="title_activity_other_feedback_type">OtherFeedbackType</string>
    <string name="title_activity_record_mobile">RecordMobile</string>
    <string name="emp_id">Please Enter Employee ID</string>
    <string name="login_password">Password</string>

    <string-array name="array_feedback">
        <item><b>-------SELECT-------</b></item>
        <item>Service not recieved at all</item>
        <item>Servicing Representative/Branch Staff is not helpful/courteous</item>
        <item>Procedure defined for service is not okay and can be improved</item>
        <item>Service is not delivered in time</item>
        <item>Branch ambiance is not upto mark</item>
        <item>Any others</item>
    </string-array>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_option_selector">OptionSelector</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_os">OS</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_op_sel">OpSel</string>
    <string name="title_activity_customer_selector">CustomerSelector</string>
    <string name="title_activity_ratings_feedback">RatingsFeedback</string>

</resources>