<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.feedback.Home" >

    <TextView
        android:id="@+id/textView_home_cust_feeedbk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cust_feedbk" />

    <TextView
        android:id="@+id/textView_home_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings_sbi"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_home_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_exp" />

    <Button
        android:id="@+id/button_home_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_click_cont" />

</LinearLayout>