<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.feedback.OtherFeedbackType" >

    <TextView
        android:id="@+id/textView_other_feedback_type_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_other_feedback_type_purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purpose_of_visit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup_other_feedback_type_purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton_other_feedback_type_insurance_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/insurance_plan" />

        <RadioButton
            android:id="@+id/radioButton_other_feedback_type_insurance_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insurance_agent" />

        <RadioButton
            android:id="@+id/radioButton_other_feedback_type_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career" />

        <RadioButton
            android:id="@+id/radioButton__other_feedback_type_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText_other_feedback_type_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_other_feedback_type_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>