<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.feedback.RecordMobile" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_record_mobile_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mob_reg"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_rcrd_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy_number" />

            <EditText
                android:id="@+id/editText_record_mobile_policy_numer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="11" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView_record_mob_policy_11digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_11_digits"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_rcrd_mob_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob" />

            <EditText
                android:id="@+id/editText_record_mob_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="DD-MM-YYYY"
                android:inputType="date"
                android:maxLength="10" />

            <TextView
                android:id="@+id/textView_rcrd_mob_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView_rcrd_mob_pan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pan" />

            <EditText
                android:id="@+id/editText_recorcd_mobile_pan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Button
                android:id="@+id/button_record_mob_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>