<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.feedback.RegisterUser" >

    <TextView
        android:id="@+id/textView_regi_usr_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/prospect_user"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_register_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editText_register_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ededed"
                android:ems="10"
                android:textColor="@color/Black" >
            </EditText>

            <TextView
                android:id="@+id/textView_register_user_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/mobile_number" />

            <EditText
                android:id="@+id/editText_register_user_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ededed"
                android:ems="10"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/textView_reg_user_10_digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_10_digits"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button_register_user_submit"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#1382b0"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>